stops hover menu being cut off on blog index

--- a/sass/_blog.scss
+++ b/sass/_blog.scss
@@ -115,7 +115,7 @@
 }
 
 .blog-index-categories, .blog-index-date {
-	margin: 0 0.25em;
+	margin: 0 3vw;
 }
 
 .blog-index-date {
